--- a/kinect-pong/MainWindow.xaml
+++ b/kinect-pong/MainWindow.xaml
@@ -1,19 +1,32 @@
 ﻿<Window x:Class="kinect_pong.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="600" Width="800" Closing="MainWindow_Closing" Background="White">
+        Title="MainWindow" Height="600" Width="900" Closing="MainWindow_Closing" Background="White">
     <Grid Background="#FFFFFAFF">
-        <Rectangle Height="500" Name="rectangle1" Stroke="Black" Width="660" Canvas.Left="-8" Canvas.Top="-7" Fill="Black" Margin="54,1,64,60" />
-        <Rectangle Height="480" Name="rectangle2" Stroke="Black" Width="640" Fill="White" Canvas.Left="0" Canvas.Top="0" Margin="64,11,74,70" />
-        <Image Height="480" Name="SkeletonImage" Stretch="Fill" Width="640" Margin="64,13,74,68" Opacity="0.5" />
-        <Canvas Height="480" HorizontalAlignment="Left" Name="GameCanvas" VerticalAlignment="Top" Width="640" Margin="64,11,0,0" ClipToBounds="True">
+        <Rectangle Name="rectangle1" Stroke="Black" Canvas.Left="-8" Canvas.Top="-7" Fill="Black" Margin="215,1,1,0" />
+        <Rectangle Height="480" Name="rectangle2" Stroke="Black" Width="640" Fill="White" Canvas.Left="0" Canvas.Top="0" Margin="227,11,11,70" />
+        <Image Height="480" Name="SkeletonImage" Stretch="Fill" Width="640" Margin="227,11,11,70" Opacity="0.5" />
+        <Canvas Height="480" HorizontalAlignment="Left" Name="GameCanvas" VerticalAlignment="Top" Width="640" Margin="227,11,0,0" ClipToBounds="True">
             
         </Canvas>
-        <Label Content="Kinect Pong" Height="52" HorizontalAlignment="Left" Margin="312,509,0,0" Name="label1" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" />
-        <Label Content="Player One" Height="28" HorizontalAlignment="Left" Margin="114,498,0,0" Name="label2" VerticalAlignment="Top" FontSize="14" FontWeight="Bold" />
-        <Label Content="Player Two" FontSize="14" FontWeight="Bold" Height="28" HorizontalAlignment="Left" Margin="571,498,0,0" Name="label3" VerticalAlignment="Top" />
-        <Label Content="0" Height="40" HorizontalAlignment="Left" Margin="114,521,0,0" VerticalAlignment="Top" FontSize="18" Name="scoreOneLabel" Width="81" HorizontalContentAlignment="Center" />
-        <Label Content="0" FontSize="18" Height="40" HorizontalAlignment="Left" Margin="571,521,0,0" Name="scoreTwoLabel" VerticalAlignment="Top" Width="83" HorizontalContentAlignment="Center" />
-        
+        <Label Content="Kinect Pong" Height="52" HorizontalAlignment="Left" Margin="31,12,0,0" Name="label1" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" />
+        <Label Content="Player One" Height="28" HorizontalAlignment="Left" Margin="326,498,0,0" Name="label2" VerticalAlignment="Top" FontSize="14" FontWeight="Bold" Foreground="White" />
+        <Label Content="Player Two" FontSize="14" FontWeight="Bold" Height="28" HorizontalAlignment="Right" Margin="0,498,119,0" Name="label3" VerticalAlignment="Top" Foreground="White" />
+        <Label Content="0" Height="40" HorizontalAlignment="Left" Margin="326,521,0,0" VerticalAlignment="Top" FontSize="18" Name="scoreOneLabel" Width="81" HorizontalContentAlignment="Center" Foreground="White" />
+        <Label Content="0" FontSize="18" Height="40" HorizontalAlignment="Left" Margin="676,521,0,0" Name="scoreTwoLabel" VerticalAlignment="Top" Width="83" HorizontalContentAlignment="Center" Foreground="White" />
+        <Label Content="by Ben Centra" FontSize="12" FontWeight="Normal" Height="30" HorizontalAlignment="Left" Margin="59,49,0,0" Name="label4" VerticalAlignment="Top" />
+        <Image Height="150" HorizontalAlignment="Left" Margin="8,399,0,0" Name="rgbImage" Stretch="Fill" VerticalAlignment="Top" Width="200" Opacity="1" />
+        <Button Content="Start Game" Height="33" HorizontalAlignment="Left" Margin="43,91,0,0" Name="startGameButton" VerticalAlignment="Top" Width="125" FontSize="14" Click="startGameButton_Click" />
+        <Button Content="Pause Game" FontSize="14" Height="33" HorizontalAlignment="Left" Margin="43,138,0,0" Name="pauseGameButton" VerticalAlignment="Top" Width="125" Click="pauseGameButton_Click" />
+        <Label Content="Options:" FontSize="14" FontWeight="Bold" Height="30" HorizontalAlignment="Left" Margin="8,192,0,0" Name="label5" VerticalAlignment="Top" />
+        <Label Content="Winning Score:" FontSize="14" FontWeight="Normal" Height="30" HorizontalAlignment="Left" Margin="8,228,0,0" Name="label6" VerticalAlignment="Top" />
+        <TextBox Height="23" HorizontalAlignment="Left" Margin="116,232,0,0" Name="winningScoreBox" VerticalAlignment="Top" Width="79" Text="10" TextChanged="winningScoreBox_Changed" />
+        <Label Content="Player One Handedness:" FontSize="14" FontWeight="Normal" Height="30" HorizontalAlignment="Left" Margin="8,264,0,0" Name="label7" VerticalAlignment="Top" />
+        <Label Content="Player Two Handedness:" FontSize="14" FontWeight="Normal" Height="30" HorizontalAlignment="Left" Margin="8,323,0,0" Name="label8" VerticalAlignment="Top" />
+        <RadioButton Content="Left" Height="16" HorizontalAlignment="Left" Margin="31,293,0,0" Name="playerOneLeftButton" VerticalAlignment="Top" GroupName="PlayerOneHandedness" Checked="playerOneLeftButton_Checked" />
+        <RadioButton Content="Right" Height="16" HorizontalAlignment="Left" Margin="93,293,0,0" Name="playerOneRightButton" VerticalAlignment="Top" GroupName="PlayerOneHandedness" IsChecked="True" Checked="playerOneRightButton_Checked" />
+        <RadioButton Content="Left" Height="16" HorizontalAlignment="Left" Margin="31,352,0,0" Name="playerTwoLeftButton" VerticalAlignment="Top" GroupName="PlayerTwoHandedness" Checked="playerTwoLeftButton_Checked" />
+        <RadioButton Content="Right" Height="16" HorizontalAlignment="Left" Margin="93,352,0,0" Name="playerTwoRightButton" VerticalAlignment="Top" GroupName="PlayerTwoHandedness" IsChecked="True" Checked="playerTwoRightButton_Checked" />
+        <Label Height="28" Name="gameLabel" Canvas.Left="290" Canvas.Top="181" Margin="421,143,207,390" HorizontalContentAlignment="Center" FontSize="14" Content="Click &quot;Start Game&quot; to Begin" />
     </Grid>
 </Window>
