--- a/kinect-pong/MainWindow.xaml
+++ b/kinect-pong/MainWindow.xaml
@@ -5,6 +5,7 @@
     <Grid Background="#FFFFFAFF" Height="1080">
         <Rectangle Name="rectangle1" Stroke="Black" Canvas.Left="-8" Canvas.Top="-7" Fill="Black" Margin="536,0,0,0" />
         <Rectangle Height="960" Name="rectangle2" Stroke="Black" Width="1280" Fill="White" Canvas.Left="0" Canvas.Top="0" Margin="577,24,41,96" />
+        <Image Height="960" HorizontalAlignment="Left" Margin="587,24,0,96" Name="rgbImage" Stretch="Fill" Width="1280" Opacity=".5" />
         <Image Height="960" Name="SkeletonImage" Stretch="Fill" Width="1280" Margin="577,24,41,96" Opacity="0.25" />
         <Canvas Height="960" HorizontalAlignment="Left" Name="GameCanvas" VerticalAlignment="Top" Width="1280" Margin="577,24,0,0" ClipToBounds="True">
             
@@ -15,26 +16,25 @@
         <Label Content="0" Height="42" HorizontalAlignment="Left" Margin="718,990,0,0" VerticalAlignment="Top" FontSize="24" Name="scoreOneLabel" Width="58" HorizontalContentAlignment="Center" Foreground="White" />
         <Label Content="0" FontSize="24" Height="42" HorizontalAlignment="Left" Margin="1824,990,0,0" Name="scoreTwoLabel" VerticalAlignment="Top" Width="62" HorizontalContentAlignment="Center" Foreground="White" />
         <Label Content="by Ben Centra" FontSize="24" FontWeight="Normal" Height="58" HorizontalAlignment="Left" Margin="183,102,0,0" Name="label4" VerticalAlignment="Top" />
-        <Image Height="300" HorizontalAlignment="Left" Margin="65,746,0,0" Name="rgbImage" Stretch="Fill" VerticalAlignment="Top" Width="400" Opacity="1" />
         <Button Content="Start Game" Height="67" HorizontalAlignment="Left" Margin="136,160,0,0" Name="startGameButton" VerticalAlignment="Top" Width="250" FontSize="24" Click="startGameButton_Click" />
         <Button Content="Pause Game" FontSize="24" Height="67" HorizontalAlignment="Left" Margin="136,244,0,0" Name="pauseGameButton" VerticalAlignment="Top" Width="250" Click="pauseGameButton_Click" />
         <Label Content="Options:" FontSize="24" FontWeight="Bold" Height="51" HorizontalAlignment="Left" Margin="12,358,0,0" Name="label5" VerticalAlignment="Top" />
-        <Label Content="Winning Score:" FontSize="24" FontWeight="Normal" Height="49" HorizontalAlignment="Left" Margin="13,566,0,0" Name="label6" VerticalAlignment="Top" />
-        <TextBox Height="38" HorizontalAlignment="Left" Margin="191,0,0,470" Name="winningScoreBox" VerticalAlignment="Bottom" Width="140" Text="10" TextChanged="winningScoreBox_Changed" FontSize="20" />
-        <Label Content="Player One Handedness:" FontSize="24" FontWeight="Normal" Height="50" HorizontalAlignment="Left" Margin="12,401,0,0" Name="label7" VerticalAlignment="Top" />
-        <Label Content="Player Two Handedness:" FontSize="24" FontWeight="Normal" Height="50" HorizontalAlignment="Left" Margin="12,477,0,0" Name="label8" VerticalAlignment="Top" />
-        <RadioButton Content="Left" Height="34" HorizontalAlignment="Left" Margin="97,446,0,0" Name="playerOneLeftButton" VerticalAlignment="Top" GroupName="PlayerOneHandedness" Checked="playerOneLeftButton_Checked" FontSize="20" />
-        <RadioButton Content="Right" Height="34" HorizontalAlignment="Left" Margin="190,446,0,0" Name="playerOneRightButton" VerticalAlignment="Top" GroupName="PlayerOneHandedness" IsChecked="True" Checked="playerOneRightButton_Checked" FontSize="20" />
-        <RadioButton Content="Left" Height="32" HorizontalAlignment="Left" Margin="97,524,0,0" Name="playerTwoLeftButton" VerticalAlignment="Top" GroupName="PlayerTwoHandedness" Checked="playerTwoLeftButton_Checked" FontSize="20" />
-        <RadioButton Content="Right" Height="32" HorizontalAlignment="Left" Margin="190,524,0,0" Name="playerTwoRightButton" VerticalAlignment="Top" GroupName="PlayerTwoHandedness" IsChecked="True" Checked="playerTwoRightButton_Checked" FontSize="20" />
+        <Label Content="Winning Score:" FontSize="24" FontWeight="Normal" Height="49" HorizontalAlignment="Left" Margin="13,611,0,0" Name="label6" VerticalAlignment="Top" />
+        <TextBox Height="38" HorizontalAlignment="Left" Margin="191,0,0,425" Name="winningScoreBox" VerticalAlignment="Bottom" Width="140" Text="10" TextChanged="winningScoreBox_Changed" FontSize="20" />
+        <Label Content="Player One Handedness:" FontSize="24" FontWeight="Normal" Height="50" HorizontalAlignment="Left" Margin="12,421,0,0" Name="label7" VerticalAlignment="Top" />
+        <Label Content="Player Two Handedness:" FontSize="24" FontWeight="Normal" Height="50" HorizontalAlignment="Left" Margin="12,497,0,0" Name="label8" VerticalAlignment="Top" />
+        <RadioButton Content="Left" Height="34" HorizontalAlignment="Left" Margin="97,466,0,0" Name="playerOneLeftButton" VerticalAlignment="Top" GroupName="PlayerOneHandedness" Checked="playerOneLeftButton_Checked" FontSize="20" />
+        <RadioButton Content="Right" Height="34" HorizontalAlignment="Left" Margin="190,466,0,0" Name="playerOneRightButton" VerticalAlignment="Top" GroupName="PlayerOneHandedness" IsChecked="True" Checked="playerOneRightButton_Checked" FontSize="20" />
+        <RadioButton Content="Left" Height="32" HorizontalAlignment="Left" Margin="97,544,0,0" Name="playerTwoLeftButton" VerticalAlignment="Top" GroupName="PlayerTwoHandedness" Checked="playerTwoLeftButton_Checked" FontSize="20" />
+        <RadioButton Content="Right" Height="32" HorizontalAlignment="Left" Margin="190,544,0,0" Name="playerTwoRightButton" VerticalAlignment="Top" GroupName="PlayerTwoHandedness" IsChecked="True" Checked="playerTwoRightButton_Checked" FontSize="20" />
         <Label Name="gameLabel" Canvas.Left="415" Canvas.Top="393" HorizontalContentAlignment="Center" FontSize="36" Content="Click &quot;Start Game&quot; to Begin" Margin="444,325,-82,657" />
-        <Slider Height="26" HorizontalAlignment="Left" Margin="85,712,0,0" Name="spinSlider" VerticalAlignment="Top" Width="194" SmallChange="1" TickPlacement="TopLeft" IsSnapToTickEnabled="True" Value="4" ValueChanged="spinSlider_Changed" />
-        <Label Content="Spin:" FontSize="24" FontWeight="Normal" Height="49" HorizontalAlignment="Left" Margin="12,681,0,0" Name="label9" VerticalAlignment="Top" />
-        <Label Content="0" FontSize="18" FontWeight="Normal" Height="36" HorizontalAlignment="Left" Margin="81,681,0,0" Name="label10" VerticalAlignment="Top" Width="21" />
-        <Label Content="10" FontSize="18" FontWeight="Normal" Height="36" HorizontalAlignment="Left" Margin="261,681,0,0" Name="label11" VerticalAlignment="Top" Width="34" />
-        <Label Content="Starting Speed:" FontSize="24" FontWeight="Normal" Height="49" HorizontalAlignment="Left" Margin="12,625,0,0" Name="label12" VerticalAlignment="Top" />
-        <Slider Height="26" HorizontalAlignment="Left" IsSnapToTickEnabled="True" Margin="190,653,0,0" Name="speedSlider" SmallChange="2" TickPlacement="TopLeft" Value="4" VerticalAlignment="Top" Width="141" LargeChange="2" Maximum="8" Minimum="2" TickFrequency="2" ValueChanged="speedSlider_Changed" />
-        <Label Content="2" FontSize="18" FontWeight="Normal" Height="36" HorizontalAlignment="Left" Margin="186,624,0,0" Name="label13" VerticalAlignment="Top" Width="21" />
-        <Label Content="8" FontSize="18" FontWeight="Normal" Height="36" HorizontalAlignment="Left" Margin="316,624,0,0" Name="label14" VerticalAlignment="Top" Width="34" />
+        <Slider Height="26" HorizontalAlignment="Left" Margin="85,806,0,0" Name="spinSlider" VerticalAlignment="Top" Width="194" SmallChange="1" TickPlacement="TopLeft" IsSnapToTickEnabled="True" Value="4" ValueChanged="spinSlider_Changed" />
+        <Label Content="Spin:" FontSize="24" FontWeight="Normal" Height="49" HorizontalAlignment="Left" Margin="12,775,0,0" Name="label9" VerticalAlignment="Top" />
+        <Label Content="0" FontSize="18" FontWeight="Normal" Height="36" HorizontalAlignment="Left" Margin="81,775,0,0" Name="label10" VerticalAlignment="Top" Width="21" />
+        <Label Content="10" FontSize="18" FontWeight="Normal" Height="36" HorizontalAlignment="Left" Margin="261,775,0,0" Name="label11" VerticalAlignment="Top" Width="34" />
+        <Label Content="Starting Speed:" FontSize="24" FontWeight="Normal" Height="49" HorizontalAlignment="Left" Margin="12,695,0,0" Name="label12" VerticalAlignment="Top" />
+        <Slider Height="26" HorizontalAlignment="Left" IsSnapToTickEnabled="True" Margin="190,723,0,0" Name="speedSlider" SmallChange="2" TickPlacement="TopLeft" Value="4" VerticalAlignment="Top" Width="141" LargeChange="2" Maximum="8" Minimum="2" TickFrequency="2" ValueChanged="speedSlider_Changed" />
+        <Label Content="2" FontSize="18" FontWeight="Normal" Height="36" HorizontalAlignment="Left" Margin="186,694,0,0" Name="label13" VerticalAlignment="Top" Width="21" />
+        <Label Content="8" FontSize="18" FontWeight="Normal" Height="36" HorizontalAlignment="Left" Margin="316,694,0,0" Name="label14" VerticalAlignment="Top" Width="34" />
     </Grid>
 </Window>
